# gcloud-pubsub-emulator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  message-sample.json  pyproject.toml
pubsub-utils/: publisher.py  subscriber.py
